Fix Menu not being visible because it was behind the background

--- a/src/pages/random-thought/random-thought.styles.scss
+++ b/src/pages/random-thought/random-thought.styles.scss
@@ -12,7 +12,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 999;
         width: 100vw;
         height: 100vh;
         background-size: cover;
@@ -30,7 +29,7 @@
     }
 
     .text {
-        z-index: 9999;
+        z-index: 99;
         width: 80%;
         height: 70%;
         margin: auto;
@@ -44,6 +43,5 @@
     .shuffle-button {
         position: absolute;
         bottom: 5%;
-        z-index: 9999;
     }
 }
